# axela

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
deploy/: DEPLOY.md
deploy/terraform/: alb.tf  ecs.tf  efs.tf  iam.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
src/axela/: __init__.py  config.py  main.py
src/axela/api/: __init__.py  app.py  deps.py
src/axela/api/middleware/: __init__.py  auth.py
src/axela/api/routes/: __init__.py  health.py  projects.py  schedules.py  settings.py  sources.py
src/axela/application/ports/: __init__.py  collector.py  message_bus.py  repository.py
src/axela/application/services/: __init__.py  digest_service.py  error_alert_service.py  summarization_service.py
src/axela/domain/: __init__.py  enums.py  events.py  models.py
src/axela/infrastructure/bus/: __init__.py  memory.py
src/axela/infrastructure/collectors/: __init__.py  base.py  gmail.py  google_calendar.py  jira.py  outlook_calendar.py  outlook_mail.py  slack.py  teams.py
src/axela/infrastructure/database/: __init__.py  models.py  repository.py  session.py  types.py
src/axela/infrastructure/scheduler/: __init__.py  apscheduler.py
src/axela/infrastructure/telegram/: __init__.py  bot.py  formatter.py
src/axela/web/: __init__.py  routes.py
src/axela/web/templates/: base.html
src/axela/web/templates/components/: project_card.html  schedule_card.html  source_card.html  status.html
src/axela/web/templates/pages/: dashboard.html  projects.html  schedules.html  settings.html  sources.html
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_repository.py
tests/unit/: test_api_deps.py  test_api_health.py  test_api_projects.py  test_api_schedules.py  test_api_settings.py  test_api_sources.py  test_bot.py  test_digest_service.py  test_error_alert_service.py  test_formatter.py  test_message_bus.py  test_repository_unit.py  test_scheduler.py  test_session.py  test_web_routes.py
tests/unit/test_collectors/: test_gmail.py  test_google_calendar.py  test_jira.py  test_outlook_calendar.py  test_outlook_mail.py  test_slack.py  test_teams.py
